@@ -3,6 +3,8 @@
 2009-06-23  Eric Hodel  <drbrain@segment7.net>
 
 	* release_notes/rel_1_3_5.rdoc:  RubyGems 1.3.5 release notes.
+	* lib/rubygems/builder.rb:  Only print out with verbose.
+	* lib/rubygems/package_task.rb:  Only print out with -t.
 
 2009-06-12  Ryan Davis  <ryand@zenspider.com>
 
